i18n/zh-CN/docusaurus-plugin-content-docs/version-0.8.0/reference/xlang-api/go-api.md
---
sidebar_position: 3
---

# Go API

<!-- Code generated by gomarkdoc. DO NOT EDIT -->

```go
import kcl "kcl-lang.io/kcl-go"
```

```
┌─────────────────┐         ┌─────────────────┐           ┌─────────────────┐
│     kcl files   │         │    KCL-Go-API   │           │  KCLResultList  │
│  ┌───────────┐  │         │                 │           │                 │
│  │    1.k    │  │         │                 │           │                 │
│  └───────────┘  │         │                 │           │  ┌───────────┐  │         ┌───────────────┐
│  ┌───────────┐  │         │  ┌───────────┐  │           │  │ KCLResult │──┼────────▶│x.Get("a.b.c") │
│  │    2.k    │  │         │  │ Run(path) │  │           │  └───────────┘  │         └───────────────┘
│  └───────────┘  │────┐    │  └───────────┘  │           │                 │
│  ┌───────────┐  │    │    │                 │           │  ┌───────────┐  │         ┌───────────────┐
│  │    3.k    │  │    │    │                 │           │  │ KCLResult │──┼────────▶│x.Get("k", &v) │
│  └───────────┘  │    │    │                 │           │  └───────────┘  │         └───────────────┘
│  ┌───────────┐  │    ├───▶│  ┌───────────┐  │──────────▶│                 │
│  │setting.yml│  │    │    │  │RunFiles() │  │           │  ┌───────────┐  │         ┌───────────────┐
│  └───────────┘  │    │    │  └───────────┘  │           │  │ KCLResult │──┼────────▶│x.JSONString() │
└─────────────────┘    │    │                 │           │  └───────────┘  │         └───────────────┘
                       │    │                 │           │                 │
┌─────────────────┐    │    │                 │           │  ┌───────────┐  │         ┌───────────────┐
│     Options     │    │    │  ┌───────────┐  │           │  │ KCLResult │──┼────────▶│x.YAMLString() │
│WithOptions      │    │    │  │MustRun()  │  │           │  └───────────┘  │         └───────────────┘
│WithOverrides    │────┘    │  └───────────┘  │           │                 │
│WithWorkDir      │         │                 │           │                 │
│WithDisableNone  │         │                 │           │                 │
└─────────────────┘         └─────────────────┘           └─────────────────┘
```

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	const k_code = `
name = "kcl"
age = 1

two = 2

schema Person:
    name: str = "kcl"
    age: int = 1

x0 = Person {}
x1 = Person {
	age = 101
}
`

	yaml := kcl.MustRun("testdata/main.k", kcl.WithCode(k_code)).First().YAMLString()
	fmt.Println(yaml)

	fmt.Println("----")

	result := kcl.MustRun("./testdata/main.k").First()
	fmt.Println(result.JSONString())

	fmt.Println("----")
	fmt.Println("x0.name:", result.Get("x0.name"))
	fmt.Println("x1.age:", result.Get("x1.age"))

	fmt.Println("----")

	var person struct {
		Name string
		Age  int
	}
	fmt.Printf("person: %+v\n", result.Get("x1", &person))
}
```

</p>
</details>

## Index

- [Go API](#go-api)
	- [Index](#index)
	- [Constants](#constants)
	- [func FormatCode](#func-formatcode)
	- [func FormatPath](#func-formatpath)
	- [func GetSchemaTypeMapping](#func-getschematypemapping)
	- [func InitKclvmPath](#func-initkclvmpath)
	- [func InitKclvmRuntime](#func-initkclvmruntime)
	- [func LintPath](#func-lintpath)
	- [func ListDepFiles](#func-listdepfiles)
	- [func ListDownStreamFiles](#func-listdownstreamfiles)
	- [func ListUpStreamFiles](#func-listupstreamfiles)
	- [func OverrideFile](#func-overridefile)
	- [func Validate](#func-validate)
	- [func ValidateCode](#func-validatecode)
	- [type KCLResult](#type-kclresult)
	- [type KCLResultList](#type-kclresultlist)
		- [func MustRun](#func-mustrun)
		- [func Run](#func-run)
		- [func RunFiles](#func-runfiles)
	- [type KclType](#type-kcltype)
		- [func GetSchemaType](#func-getschematype)
	- [type ListDepFilesOption](#type-listdepfilesoption)
	- [type ListDepsOptions](#type-listdepsoptions)
	- [type Option](#type-option)
		- [func WithCode](#func-withcode)
		- [func WithDisableNone](#func-withdisablenone)
		- [func WithExternalPkgs](#func-withexternalpkgs)
		- [func WithFullTypePath](#func-withfulltypepath)
		- [func WithIncludeSchemaTypePath](#func-withincludeschematypepath)
		- [func WithKFilenames](#func-withkfilenames)
		- [func WithLogger](#func-withlogger)
		- [func WithOptions](#func-withoptions)
		- [func WithOverrides](#func-withoverrides)
		- [func WithPrintOverridesAST](#func-withprintoverridesast)
		- [func WithSelectors](#func-withselectors)
		- [func WithSettings](#func-withsettings)
		- [func WithShowHidden](#func-withshowhidden)
		- [func WithSortKeys](#func-withsortkeys)
		- [func WithWorkDir](#func-withworkdir)
	- [type TestCaseInfo](#type-testcaseinfo)
	- [type TestOptions](#type-testoptions)
	- [type TestResult](#type-testresult)
		- [func Test](#func-test)
	- [type ValidateOptions](#type-validateoptions)

## Constants

KclvmAbiVersion is the current kclvm ABI version.

```go
const KclvmAbiVersion = scripts.KclvmAbiVersion
```

## func [FormatCode](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L143)

```go
func FormatCode(code interface{}) ([]byte, error)
```

FormatCode returns the formatted code.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	out, err := kcl.FormatCode(`a  =  1+2`)
	if err != nil {
		log.Fatal(err)
	}
	fmt.Println(string(out))

}
```

```
a = 1 + 2
```

</p>
</details>

## func [FormatPath](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L155)

```go
func FormatPath(path string) (changedPaths []string, err error)
```

FormatPath formats files from the given path path: if path is \`.\` or empty string, all KCL files in current directory will be formatted, not recursively if path is \`path/file.k\`, the specified KCL file will be formatted if path is \`path/to/dir\`, all KCL files in the specified dir will be formatted, not recursively if path is \`path/to/dir/...\`, all KCL files in the specified dir will be formatted recursively

the returned changedPaths are the changed file paths \(relative path\)

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	changedPaths, err := kcl.FormatPath("testdata/fmt")
	if err != nil {
		log.Fatal(err)
	}
	fmt.Println(changedPaths)
}
```

</p>
</details>

## func [GetSchemaTypeMapping](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L237)

```go
func GetSchemaTypeMapping(file, code, schemaName string) (map[string]*KclType, error)
```

GetSchemaTypeMapping returns a \<schemaName\>:\<schemaType\> mapping of schema types from a kcl file or code.

file: string

```
The kcl filename
```

code: string

```
The kcl code string
```

schema_name: string

```
The schema name got, when the schema name is empty, all schemas are returned.
```

## func [InitKclvmPath](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L61)

```go
func InitKclvmPath(kclvmRoot string)
```

InitKclvmPath init kclvm path.

## func [InitKclvmRuntime](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L66)

```go
func InitKclvmRuntime(n int)
```

InitKclvmRuntime init kclvm process.

## func [LintPath](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L175)

```go
func LintPath(paths []string) (results []string, err error)
```

LintPath lint files from the given path

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	// import a
	// import a # reimport

	results, err := kcl.LintPath([]string{"testdata/lint/import.k"})
	if err != nil {
		log.Fatal(err)
	}
	for _, s := range results {
		fmt.Println(s)
	}

}
```

```
Module 'a' is reimported multiple times
Module 'a' imported but unused
Module 'a' imported but unused
```

</p>
</details>

## func [ListDepFiles](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L160)

```go
func ListDepFiles(workDir string, opt *ListDepFilesOption) (files []string, err error)
```

ListDepFiles return the depend files from the given path

## func [ListDownStreamFiles](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L170)

```go
func ListDownStreamFiles(workDir string, opt *ListDepsOptions) ([]string, error)
```

ListDownStreamFiles return a list of downstream depend files from the given changed path list.

## func [ListUpStreamFiles](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L165)

```go
func ListUpStreamFiles(workDir string, opt *ListDepsOptions) (deps []string, err error)
```

ListUpStreamFiles return a list of upstream depend files from the given path list

## func [OverrideFile](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L187)

```go
func OverrideFile(file string, specs, importPaths []string) (bool, error)
```

OverrideFile rewrites a file with override spec file: string. The File that need to be overridden specs: \[\]string. List of specs that need to be overridden.

```
Each spec string satisfies the form: <pkgpath>:<field_path>=<filed_value> or <pkgpath>:<field_path>-
When the pkgpath is '__main__', it can be omitted.
```

importPaths. List of import statements that need to be added

## func [Validate](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L198)

```go
func Validate(dataFile, schemaFile string, opts *ValidateOptions) (ok bool, err error)
```

Validate validates the given data file against the specified schema file with the provided options.

## func [ValidateCode](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L192)

```go
func ValidateCode(data, code string, opts *ValidateOptions) (ok bool, err error)
```

ValidateCode validate data string match code string

## type [KCLResult](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L54)

```go
type KCLResult = kcl.KCLResult
```

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	const k_code = `
name = "kcl"
age = 1

two = 2

schema Person:
    name: str = "kcl"
    age: int = 1

x0 = Person {name = "kcl-go"}
x1 = Person {age = 101}
`

	result := kcl.MustRun("testdata/main.k", kcl.WithCode(k_code)).First()

	fmt.Println("x0.name:", result.Get("x0.name"))
	fmt.Println("x1.age:", result.Get("x1.age"))

}
```

```
x0.name: kcl-go
x1.age: 101
```

</p>
</details>

<details><summary>Example ('et_struct)</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	const k_code = `
schema Person:
    name: str = "kcl"
    age: int = 1
    X: int = 2

x = {
    "a": Person {age = 101}
    "b": 123
}
`

	result := kcl.MustRun("testdata/main.k", kcl.WithCode(k_code)).First()

	var person struct {
		Name string
		Age  int
	}
	fmt.Printf("person: %+v\n", result.Get("x.a", &person))
	fmt.Printf("person: %+v\n", person)

}
```

```
person: &{Name:kcl Age:101}
person: {Name:kcl Age:101}
```

</p>
</details>

## type [KCLResultList](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L55)

```go
type KCLResultList = kcl.KCLResultList
```

### func [MustRun](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L71)

```go
func MustRun(path string, opts ...Option) *KCLResultList
```

MustRun is like Run but panics if return any error.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	yaml := kcl.MustRun("testdata/main.k", kcl.WithCode(`name = "kcl"`)).First().YAMLString()
	fmt.Println(yaml)

}
```

```
name: kcl
```

</p>
</details>

<details><summary>Example (Raw Yaml)</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	const code = `
b = 1
a = 2
`
	yaml := kcl.MustRun("testdata/main.k", kcl.WithCode(code)).GetRawYamlResult()
	fmt.Println(yaml)

	yaml_sorted := kcl.MustRun("testdata/main.k", kcl.WithCode(code), kcl.WithSortKeys(true)).GetRawYamlResult()
	fmt.Println(yaml_sorted)

}
```

```
b: 1
a: 2
a: 2
b: 1
```

</p>
</details>

<details><summary>Example (Schema Type)</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	const code = `
schema Person:
	name: str = ""

x = Person()
`
	json := kcl.MustRun("testdata/main.k", kcl.WithCode(code)).First().JSONString()
	fmt.Println(json)

}
```

```
{
    "x": {
        "name": ""
    }
}
```

</p>
</details>

<details><summary>Example (Settings)</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	yaml := kcl.MustRun("./testdata/app0/kcl.yaml").First().YAMLString()
	fmt.Println(yaml)
}
```

</p>
</details>

### func [Run](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L76)

```go
func Run(path string, opts ...Option) (*KCLResultList, error)
```

Run evaluates the KCL program with path and opts, then returns the object list.

<details><summary>Example (Get Field)</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func assert(v bool, a ...interface{}) {
	if !v {
		a = append([]interface{}{"assert failed"}, a...)
		log.Panic(a...)
	}
}

func main() {
	// run kcl.yaml
	x, err := kcl.Run("./testdata/app0/kcl.yaml")
	assert(err == nil, err)

	// print deploy_topology[1].zone
	fmt.Println(x.First().Get("deploy_topology.1.zone"))

}
```

```
R000A
```

</p>
</details>

### func [RunFiles](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L81)

```go
func RunFiles(paths []string, opts ...Option) (*KCLResultList, error)
```

RunFiles evaluates the KCL program with multi file path and opts, then returns the object list.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	result, _ := kcl.RunFiles([]string{"./testdata/app0/kcl.yaml"})
	fmt.Println(result.First().YAMLString())
}
```

</p>
</details>

## type [KclType](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L57)

```go
type KclType = kcl.KclType
```

### func [GetSchemaType](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L220)

```go
func GetSchemaType(file, code, schemaName string) ([]*KclType, error)
```

GetSchemaType returns schema types from a kcl file or code.

file: string

```
The kcl filename
```

code: string

```
The kcl code string
```

schema_name: string

```
The schema name got, when the schema name is empty, all schemas are returned.
```

## type [ListDepFilesOption](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L49)

```go
type ListDepFilesOption = list.Option
```

## type [ListDepsOptions](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L48)

```go
type ListDepsOptions = list.DepOptions
```

## type [Option](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L47)

```go
type Option = kcl.Option
```

### func [WithCode](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L86)

```go
func WithCode(codes ...string) Option
```

WithCode returns a Option which hold a kcl source code list.

### func [WithDisableNone](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L110)

```go
func WithDisableNone(disableNone bool) Option
```

WithDisableNone returns a Option which hold a disable none switch.

### func [WithExternalPkgs](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L89)

```go
func WithExternalPkgs(externalPkgs ...string) Option
```

WithExternalPkgs returns a Option which hold a external package list.

### func [WithFullTypePath](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L118)

```go
func WithFullTypePath(fullTypePath bool) Option
```

WithFullTypePath returns a Option which hold a include full type string in the \`\_type\` attribute.

### func [WithIncludeSchemaTypePath](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L113)

```go
func WithIncludeSchemaTypePath(includeSchemaTypePath bool) Option
```

WithIncludeSchemaTypePath returns a Option which hold a include schema type path switch.

### func [WithKFilenames](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L92)

```go
func WithKFilenames(filenames ...string) Option
```

WithKFilenames returns a Option which hold a filenames list.

### func [WithLogger](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L138)

```go
func WithLogger(l io.Writer) Option
```

WithLogger returns a Option which hold a logger.

### func [WithOptions](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L95)

```go
func WithOptions(key_value_list ...string) Option
```

WithOptions returns a Option which hold a key=value pair list for option function.

<details><summary>Example</summary>
<p>

```go
package main

import (
	"fmt"
	"log"

	kcl "kcl-lang.io/kcl-go"
)

func main() {
	const code = `
name = option("name")
age = option("age")
`
	x, err := kcl.Run("hello.k", kcl.WithCode(code),
		kcl.WithOptions("name=kcl", "age=1"),
	)
	if err != nil {
		log.Fatal(err)
	}

	fmt.Println(x.First().YAMLString())

}
```

```
age: 1
name: kcl
```

</p>
</details>

### func [WithOverrides](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L98)

```go
func WithOverrides(override_list ...string) Option
```

WithOverrides returns a Option which hold a override list.

### func [WithPrintOverridesAST](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L123)

```go
func WithPrintOverridesAST(printOverridesAST bool) Option
```

WithPrintOverridesAST returns a Option which hold a printOverridesAST switch.

### func [WithSelectors](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L101)

```go
func WithSelectors(selectors ...string) Option
```

WithSelectors returns a Option which hold a path selector list.

### func [WithSettings](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L104)

```go
func WithSettings(filename string) Option
```

WithSettings returns a Option which hold a settings file.

### func [WithShowHidden](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L133)

```go
func WithShowHidden(showHidden bool) Option
```

WithShowHidden returns a Option which holds a showHidden switch.

### func [WithSortKeys](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L128)

```go
func WithSortKeys(sortKeys bool) Option
```

WithSortKeys returns a Option which holds a sortKeys switch.

### func [WithWorkDir](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L107)

```go
func WithWorkDir(workDir string) Option
```

WithWorkDir returns a Option which hold a work dir.

## type [TestCaseInfo](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L52)

```go
type TestCaseInfo = testing.TestCaseInfo
```

## type [TestOptions](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L51)

```go
type TestOptions = testing.TestOptions
```

## type [TestResult](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L53)

```go
type TestResult = testing.TestResult
```

### func [Test](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L203)

```go
func Test(testOpts *TestOptions, opts ...Option) (TestResult, error)
```

Test calls the test tool to run uni tests in packages.

## type [ValidateOptions](https://github.com/kcl-lang/kcl-go/blob/main/kclvm.go#L50)

```go
type ValidateOptions = validate.ValidateOptions
```
